well-known/nginx/01-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-config
              mountPath: /usr/share/nginx/html/.well-known/
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: static-config
          configMap:
            name: nginx-cfg
            items:
              - key: matrix-client
                path: matrix/client
              - key: matrix-server
                path: matrix/server
              - key: security
                path: security.txt
        - name: nginx-config
          configMap:
            name: nginx-cfg
            items:
              - key: default.conf
                path: default.conf
