well-known/nginx/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
