well-known/nginx/03-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ing
  namespace: nginx
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s.test`) && PathPrefix(`/.well-known/`)
      priority: 110
      services:
        - name: nginx-svc
          port: 80
